2013-12-07  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: bug fix: fixed a crash in during drag & drop operations in
        mmg's chapter editor.

2013-12-01  Moritz Bunkus  <moritz@bunkus.org>

        * Released v6.6.0.

        * mmg: new feature: implemented drag & drop in the chapter
        editor. Implements #929.

2013-11-24  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: bug fix: fixed an assertion in wxLogMessage() due to wrong
        format string/argument data types caused by changes in wxWidgets
        3.0.0. See Debian bug #730273.

        * mkvmerge: bug fix: improved resilience against MP4 files with
        obviously wrong entries in the 'sample size table' (STSZ) atom.

        * mkvmerge: bug fix: improved VC1 frame type detection so that it
        works even for streams without entry points.

2013-11-14  Moritz Bunkus  <moritz@bunkus.org>

        * mkvinfo: bug fix: at most the lower 32bits of the track numbers
        and track UIDs elements were output, even if the element in the
        file used more bits. Fixes #935.

2013-11-02  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: fixed accessing invalid memory in the memory
        handling core routines. May be triggered by the code to remove
        filler NALUs introduced in v6.5.0. Fixes #931.

2013-10-26  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: bug fix: fixed the tracks list box on the input tab being
        invisible/0 pixels high with wxWidgets 2.9.x/3.x.

        * all: integrated the Portuguese translation. Although the
        translation files themselves had been added back in 6.3.0 that
        translation wasn't available for selection due to forgetfulness on
        my part.

        * mkvmerge: bug fix: The file detection code in the MPEG
        elementary stream reader had a logic error. Fixes #928. In
        practice this logic error didn't have any consequence.

2013-10-19  Moritz Bunkus  <moritz@bunkus.org>
